plugins {
    id 'java'
    id 'jacoco'
    id 'application'
}

group = 'WinRisk'
version = '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    testImplementation 'junit:junit:4.12'
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.7
            }
        }
    }
}

// ensure tests use junit 4
test {
    useJUnit()
    finalizedBy jacocoTestReport, jacocoTestCoverageVerification
}

application {
    mainClass = 'com.winrisk.gui.StartGame'
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}

tasks.named('distZip') {
    enabled = true
}
